Hide window before minimizing when taking screenshots

This skips any minimize animations.

BUG: 476811